--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
 <div id="goliathHighlightsDetails"><b style="font-family: fantasy;font-style: italic; letter-spacing: 1vmin;">View full specs</b></div>
     </div>
 
-    <section id="section8">
+    <section id="section8">csdc
       <div id="cutomPiantGoliathTitle"><span style="font-family: fantasy;
         font-style: italic;
         font-size: 6vmin;
-        letter-spacing: 0.1vmin;">CUSTOMIZE &nbsp your order</span>  <br> $375,000 + $15,000 </div>
+        letter-spacing: 0.1vmin;">CUSTOM PAINT &nbsp your car</span>  <br> $375,000 + $15,000 </div>
       <div id="goliathTopColor1" class="goliathTopColor"></div>
       <div id="goliathTopColor2" class="goliathTopColor"></div>
 
@@ -175,7 +175,35 @@
       </div>
     </section>
     <section id="engine">
-      dsgsg
+      <div id="peekEngine">
+        a LOOK inside the HOOD
+      </div>
+      <div id="enginePic"></div>
+      <div id="noHood"></div>
+      <div id="hood"></div>
+      <div id="openHood">
+         <div class="slidecontainer">
+          <input type="range" min="1" max="55" value="53" class="slider" id="myRange">
+          <p style="font-size:0.01vmin"><span id="demo"></span></p>
+        </div>
+      </div>
+      <div id="slideMe">slide the bar left to UNCOVER THE ENGINE</div>
+      <!-- <div id="box1"></div> -->
+    </section>
+    
+    <div id="grey">
+      <div id="grey2"></div>
+    </div>
+    <section id="soundsGood">
+     <div id="soundsGoodTop1">
+       <div id="logo2"></div>
+     </div>
+     <div id="soundsGoodTop2"></div>
+     <div id="soundsGoodCar"></div>
+     <div id="soundsGoodText">
+       <div id="text1"><div id="text2">Book a test ride! </div><span style="color: white;" >SOUNDS GOOD,</span><br>WHERE CAN I TRY IT ?</div>
+       
+     </div>
     </section>
     <!-- <section id="slide">
       <div id="blueTruck"></div>
@@ -186,3 +214,4 @@
   <script src="https://cdn.jsdelivr.net/npm/@jaames/iro@5"></script>
 
 </html>
+
